--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 display: flex;
             }
         </style>
+        <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="js/p5.min.js"></script>
         <script src="js/p5.dom.min.js"></script>
         <script src="js/p5.sound.min.js"></script>
